# serde-gura

./: Cargo.toml  README.md
examples/: deserialization.rs  deserialization_partial.rs  deserialization_without_wrapper.rs  serialization.rs
src/: de.rs  error.rs  lib.rs  ser.rs
tests/: de_tests.rs  ser_tests.rs
