[package]
name = "serde_gura"
description = "Gura support for Serde"
version = "0.1.1"
authors = ["JWare Solutions <jware.organization@gmail.com>"]
repository = "https://github.com/gura-conf/serde-gura"
documentation = "https://docs.rs/serde_gura/"
edition = "2018"
license = "MIT"
keywords = ["serialization", "deserialization", "serde", "serialize", "deserialize"]

[dependencies]
serde = "1.0"
gura = "0.4.0"
indexmap = "1.7.0"

[dev-dependencies]
serde_derive = "1.0"