[package]
authors = ["JWare Solutions <jware.organization@gmail.com>"]
description = "Gura support for Serde"
documentation = "https://docs.rs/serde_gura/"
edition = "2018"
keywords = ["serialization", "deserialization", "serde", "serialize", "deserialize"]
license = "MIT"
name = "serde_gura"
repository = "https://github.com/gura-conf/serde-gura"
version = "0.1.2"

[dependencies]
gura = "0.4.1"
indexmap = "1.7.0"
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
