[package]
authors = ["JWare Solutions <jware.organization@gmail.com>"]
description = "Gura support for Serde"
documentation = "https://docs.rs/serde_gura/"
edition = "2018"
keywords = ["serialization", "deserialization", "serde", "serialize", "deserialize"]
license = "MIT"
name = "serde_gura"
repository = "https://github.com/gura-conf/serde-gura"
version = "0.1.8"

[dependencies]
gura = "0.5.5"
indexmap = "2.8.0"
serde = "1.0.219"

[dev-dependencies]
serde_derive = "1.0.219"
